ui: relations: visual fixes
fixes [#82170730]

Squashed commit of the following:

commit 0f9821cf0f8ab3415638506fb8b8f91f52aff59c
Author: Max F. Albrecht <1@178.is>
Date:   Wed Nov 12 12:36:32 2014 +0100

    adjust test

commit da447ad784e8cf06621066db55f37aff280b8d72
Author: Max F. Albrecht <1@178.is>
Date:   Wed Nov 12 12:27:47 2014 +0100

    ui: css: fix .ui-resources.grid.horizontal vertical alignment

    li items were ragged if they had content of different lengths

commit 30eb306ed1d29e0d7a4873f43d054d0f5063cd3a
Author: Max F. Albrecht <1@178.is>
Date:   Wed Nov 12 11:54:38 2014 +0100

    relations: resource-link point to #show, not #relations

commit f0bd600630394da7c1b41d29364ad41c126ccbce
Author: Max F. Albrecht <1@178.is>
Date:   Wed Nov 12 11:54:11 2014 +0100

    relations: remove line breaks from description

--- a/app/assets/stylesheets/combos/_ui-resources-grid.sass
+++ b/app/assets/stylesheets/combos/_ui-resources-grid.sass
@@ -53,8 +53,6 @@
   overflow-x: auto
   padding: 0 25px $space-s
   .ui-resource
-    display: inline-block
-    float: none
     white-space: normal
   .ui-thumbnail-privacy
     display: block
